--- a/bj/config/bjconfig.json
+++ b/bj/config/bjconfig.json
@@ -1,1 +1,1 @@
-1
+{"RemoteHosts":["https://bj.miaonapi.com","https://bajie.buzz"],"RemoteType":0,"HomePage":"https://bajie.buzz","TelegramGroup":"https://t.me/bajiebest","BuiltInProxy":""}
